Fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,15 @@ hr {
   margin-right: auto;
 }
 
-.text-mid{
+.titles {
   text-align: center;
   margin: 10px;
 	margin-bottom: 300px;
+}
+
+.text-mid {
+  text-align: center;
+  margin: 10px;
 }
 
 .text-quote{
@@ -44,7 +49,7 @@ hr {
   font-size: small;
   font-style: italic;
   text-align: center;
-  margin: 20px;
+	margin: 20px;
 }
 
 .map-title {
